--- a/src/components/navigation/navigationdesktop/NavigationDesktop.css
+++ b/src/components/navigation/navigationdesktop/NavigationDesktop.css
@@ -1,5 +1,5 @@
 .nav-start{
-    background-color: powderblue;
+    background-color: rgb(216, 213, 213);
     min-height: 3.5rem;
     padding: 1em;
 
